--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Alon Avisar</h1>
-    <img src="/MY CY/images/CS-1128.JPG" alt="my LinkedIn picture" height="190">
+    <img src="images/CS-1128.JPG" alt="my LinkedIn picture" height="190">
     <p><h2>Long story short...</h2></p>
     <p>I'm hardworking and dedicated person.</p>
     <p>I have a great experience in costumer service at technological site.</p>
